Testing some ideas with the Vector API